#-----------------------------------------------------------------------------
# Add subdirectories
#-----------------------------------------------------------------------------
add_subdirectory(ccm)
add_subdirectory(chachapoly)
add_subdirectory(eax)
add_subdirectory(gcm)
add_subdirectory(ocb)
add_subdirectory(ocb3)
