#-----------------------------------------------------------------------------
# Add subdirectories
#-----------------------------------------------------------------------------
add_subdirectory(blake2)
add_subdirectory(f9)
add_subdirectory(hmac)
add_subdirectory(omac)
add_subdirectory(pelican)
add_subdirectory(pmac)
add_subdirectory(poly1305)
add_subdirectory(xcbc)
