#-----------------------------------------------------------------------------
# Add subdirectories
#-----------------------------------------------------------------------------
add_subdirectory(cbc)
add_subdirectory(cfb)
add_subdirectory(ctr)
add_subdirectory(ecb)
add_subdirectory(f8)
add_subdirectory(lrw)
add_subdirectory(ofb)
add_subdirectory(xts)
