#-----------------------------------------------------------------------------
# Add subdirectories
#-----------------------------------------------------------------------------
add_subdirectory(asn1/der/bit)
add_subdirectory(asn1/der/boolean)
add_subdirectory(asn1/der/choice)
add_subdirectory(asn1/der/custom_type)
add_subdirectory(asn1/der/general)
add_subdirectory(asn1/der/generalizedtime)
add_subdirectory(asn1/der/ia5)
add_subdirectory(asn1/der/integer)
add_subdirectory(asn1/der/object_identifier)
add_subdirectory(asn1/der/octet)
add_subdirectory(asn1/der/printable_string)
add_subdirectory(asn1/der/sequence)
add_subdirectory(asn1/der/set)
add_subdirectory(asn1/der/short_integer)
add_subdirectory(asn1/der/teletex_string)
add_subdirectory(asn1/der/utctime)
add_subdirectory(asn1/der/utf8)
add_subdirectory(asn1/oid)
add_subdirectory(asn1/pkcs8)
add_subdirectory(asn1/x509)
add_subdirectory(dh)
add_subdirectory(dsa)
add_subdirectory(ecc)
add_subdirectory(pkcs1)
add_subdirectory(rsa)
